# Scarab

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  Scarab.sln  io.github.NickKarpowicz.Scarab.json  io.github.NickKarpowicz.scarab.json
.github/workflows/: windows-build.yml
BuildResources/: io.github.NickKarpowicz.Scarab.desktop  io.github.NickKarpowicz.Scarab.json
Scarab/: .clang-format  .clang-tidy  Scarab.cpp  Scarab.hpp  Scarab.vcxproj  Scarab.vcxproj.filters  batch_acquisition.hpp  gtk_wrappers.hpp  interferometry.hpp  interpolation.hpp  ocean_spectrometer.hpp  spectrometer.hpp  windows_launcher.cpp
Scarab/ExternalLibraries/: GtkWrappers.h  LightwaveExplorerGraphicalClasses.h  LightwaveExplorerHelpers.h  LightwaveExplorerPlots.h
ScarabWin64/share/glib-2.0/schemas/: gschemas.compiled
