
cmake_minimum_required(VERSION 3.23.0)
project(scarab LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
if(NOT FLATPAK)
    if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/gcem)
        message("Using existing gcem clone")
    else()
        execute_process(COMMAND git clone --depth=1 https://github.com/kthohr/gcem)
    endif()

    if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/OD_components)
        message("Using existing OD components")
    else()
        if(WINDOWS)
            execute_process(COMMAND curl https://datashare.mpcdf.mpg.de/public.php/dav/files/C99CKDktyQgm5wt --output OD_components.tar.gz)
        else()
            execute_process(COMMAND curl https://datashare.mpcdf.mpg.de/public.php/dav/files/rpxPyMEQrWqwKBW --output OD_components.tar.gz)
        endif()
        execute_process(COMMAND tar -xzf OD_components.tar.gz)
    endif()
endif()

find_package(PkgConfig REQUIRED)
find_package(fmt REQUIRED)
find_package(OpenMP REQUIRED)
add_compile_options(${OpenMP_CXX_FLAGS})
if(FLATPAK)
    include_directories(/app/include)
    link_directories(/app/lib)
else()
    include_directories(${CMAKE_CURRENT_BINARY_DIR}/OD_components/include)
    include_directories(${CMAKE_CURRENT_BINARY_DIR}/gcem/include)
    link_directories(${CMAKE_CURRENT_BINARY_DIR}/OD_components/lib)
endif()

pkg_check_modules(GTK4 gtk4)
include_directories(${GTK4_INCLUDE_DIRS})
link_directories(${GTK4_LIBRARY_DIRS})
add_compile_options(-fopenmp)
add_executable(scarab
    Scarab/Scarab.cpp)
target_link_libraries(scarab ${GTK4_LIBRARIES})
target_link_libraries(scarab fmt::fmt -lm -loceandirect)
target_link_libraries(scarab OpenMP::OpenMP_CXX)
install(TARGETS scarab)
