
cmake_minimum_required(VERSION 3.23.0)
project(scarab LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
if(NOT FLATPAK)
    if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/gcem)
        message("Using existing gcem clone")
    else()
        execute_process(COMMAND git clone --depth=1 https://github.com/kthohr/gcem)
    endif()

    if(EXISTS ${CMAKE_CURRENT_BINARY_DIR}/OD_components)
        message("Using existing OD components")
    else()
        if(WIN32)
            execute_process(COMMAND wget -q -O gtk.zip https://github.com/wingtk/gvsbuild/releases/download/2026.2.0/GTK4_Gvsbuild_2026.2.0_x64.zip)
            execute_process(COMMAND unzip gtk.zip -d gtk -q)
            set(ENV{PKG_CONFIG_PATH} "${CMAKE_CURRENT_BINARY_DIR}/gtk/lib/pkgconfig")
            execute_process(COMMAND curl https://datashare.mpcdf.mpg.de/public.php/dav/files/C99CKDktyQgm5wt --output OD_components.tar.gz)
            execute_process(COMMAND tar -xzf OD_components.tar.gz)
            include_directories(${CMAKE_CURRENT_BINARY_DIR}/OD_components_win/include)
            link_directories(${CMAKE_CURRENT_BINARY_DIR}/OD_components_win/lib)
        else()
            execute_process(COMMAND curl https://datashare.mpcdf.mpg.de/public.php/dav/files/rpxPyMEQrWqwKBW --output OD_components.tar.gz)
            execute_process(COMMAND tar -xzf OD_components.tar.gz)
            include_directories(${CMAKE_CURRENT_BINARY_DIR}/OD_components/include)
            link_directories(${CMAKE_CURRENT_BINARY_DIR}/OD_components/lib)
        endif()

    endif()
endif()

find_package(PkgConfig REQUIRED)
find_package(OpenMP REQUIRED)
add_compile_options(${OpenMP_CXX_FLAGS})
if(FLATPAK)
    include_directories(/app/include)
    link_directories(/app/lib)
else()
    include_directories(${CMAKE_CURRENT_BINARY_DIR}/gcem/include)
endif()

pkg_check_modules(GTK4 gtk4)
include_directories(${GTK4_INCLUDE_DIRS})
link_directories(${GTK4_LIBRARY_DIRS})
add_executable(scarab
    Scarab/Scarab.cpp)
target_link_libraries(scarab ${GTK4_LIBRARIES})
if(WIN32)
    target_link_libraries(scarab OceanDirect.lib)
else()
    target_link_libraries(scarab oceandirect)
endif()
target_link_libraries(scarab OpenMP::OpenMP_CXX)
install(TARGETS scarab)
